styles/styles.css
@import url("products.css");
@import url("current-product.css");
@import url("checkout.css");

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  position: relative;
  z-index: 0;
  max-width: 1920px;
  margin: 0 auto;
  --color-white: #fff;
  --color-off-white: #fafafa;
  --color-light-grey: #f1f1f1;
  --color-black: #000;
  --color-off-black: #101010;
  --color-orange: #d87d4a;
  --color-light-orange: #fbaf85;
  font: normal 500 15px/25px "Manrope", sans-serif;
}

/* HIDE SCROLLBAR BUT STILL ALLOW SCROLL (CHROME, SAFARI, OPERA) */
body::-webkit-scrollbar {
  width: 0 !important;
}

/* HIDE SCROLLBAR BUT STILL ALLOW SCROLL (FIREFOX) */
body {
  scrollbar-width: none;
}

/* LOCK SCROLL ON BODY ELEMENT WHEN HAMBURGER MENU IS OPEN */
.scroll-lock {
  overflow-y: hidden;
}

main {
  position: relative;
  padding: 0 22px;
  margin-top: 100px;
}

.lower-main {
  z-index: -200;
}

input {
  caret-color: var(--color-orange);
  cursor: pointer;
}

input:focus {
  outline: 1px solid var(--color-orange);
}

select {
  cursor: pointer;
}

select:focus {
  outline: 1px solid var(--color-orange);
}

a {
  text-decoration: none;
}

ul {
  list-style-type: none;
}

h1,
h2,
h3,
h4,
h5,
h6,
.overline,
.sub-title,
.btn,
.header__title,
.shop-headphones__link-text,
.footer-menu__link {
  text-transform: uppercase;
}

h1,
h2,
h3,
h4,
h5,
h6,
.sub-title,
.btn-text {
  font-weight: 700;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
}

h1 {
  color: var(--color-white);
  font-size: 34px;
  letter-spacing: 1.8px;
  line-height: 36px;
}

h2 {
  font-size: 24px;
  letter-spacing: 1.5px;
  line-height: 44px;
}

h5 {
  font-size: 20px;
  letter-spacing: 1.7px;
  line-height: 33px;
}

h6 {
  font-size: 13px;
  letter-spacing: 1.3px;
  line-height: 24px;
}

.overline {
  color: var(--color-orange);
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 10px;
  line-height: 19px;
}

.sub-title {
  color: var(--color-orange);
  font-size: 13px;
  letter-spacing: 1px;
  line-height: 25px;
}

.sub-title--checkout {
  font-size: 11.75px;
}

.btn {
  width: 138px;
  height: 42px;
  border: 0;
  font-size: 12px;
  font-weight: 600;
  letter-spacing: 1.25px;
  line-height: 25px;
  cursor: pointer;
}

.btn--border {
  border: 1px solid var(--color-off-black);
  color: var(--color-off-black);
}

.btn--black {
  background-color: var(--color-off-black);
}

.btn--black:hover {
  background-color: #4c4c4c;
  -webkit-transition: background-color 0.2s linear;
  transition: background-color 0.2s linear;
}

.btn--orange {
  background-color: var(--color-orange);
}

.btn--orange:hover {
  background-color: var(--color-light-orange);
  -webkit-transition: background-color 0.2s linear;
  transition: background-color 0.2s linear;
}

.btn-text--white {
  color: var(--color-off-white);
}

.btn--zx7:hover,
.btn--yx1:hover {
  background-color: var(--color-off-black);
  color: var(--color-off-white);
  -webkit-transition: background-color 0.2s linear, color 0.2s linear;
  transition: background-color 0.2s linear, color 0.2s linear;
}

.hidden,
.hidden-sm,
.hidden-sm-md,
.hidden-sm-lg {
  display: none;
}

/* **************************************
*****************************************
NAVIGATION
*****************************************
************************************** */

.nav-lg-container {
  position: relative;
  z-index: 100;
}

.nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 70px;
  padding: 6px 22px 0;
  border-bottom: 1px solid #2d2d2d;
  background-color: #131313;
}

.nav__tap-container-left,
.nav__tap-container-right {
  display: flex;
  align-items: center;
  width: 40px;
  height: 40px;
}

.nav__tap-container-left {
  justify-content: flex-start;
}

.nav__tap-container-right {
  justify-content: flex-end;
}

.nav__burger-container {
  width: 15px;
  padding-bottom: 4px;
}

.cart-icon--active,
.nav__burger--active {
  filter: brightness(0.65);
}

.nav-overlay {
  position: absolute;
  top: 70px;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(5, 5, 5, 0.7);
}

.nav-list {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100vw;
  padding: 80px 22px 16px;
  margin: 0;
  background-color: var(--color-white);
}

.nav-list__item {
  width: 100%;
}

.nav-list__item:not(:last-child) {
  margin-bottom: 65px;
}

.nav__logo-container {
  width: 120px;
}

.nav__cart-container {
  width: 20.5px;
  padding-bottom: 1px;
}

.nav__burger,
.nav__logo,
.nav__cart {
  width: 100%;
  height: auto;
}

/* **************************************
*****************************************
CART OVERLAY
*****************************************
************************************** */
.cart-overlay {
  position: absolute;
  top: 70px;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 22px 22px 0;
  background: rgba(5, 5, 5, 0.7);
}

.cart {
  width: 100%;
  padding: 22px;
  border-radius: 8px;
  background-color: var(--color-white);
}

.cart-item {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 50px;
  margin-bottom: 15px;
}

.cart-item h6 {
  letter-spacing: 0;
}

.cart-item__left {
  display: flex;
  align-items: center;
}

.cart-top {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 22px;
}

.cart-top span {
  padding-left: 5px;
}

.cart-top p {
  padding-bottom: 2px;
  margin: 0;
  color: #7d7d7d;
  font-size: 11.75px;
  text-decoration: underline;
}

.cart-top p:hover {
  color: var(--color-orange);
  cursor: pointer;
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear;
}

.cart-product-price {
  height: 42px;
  margin-bottom: 10px;
}

.cart-product-price h6,
.cart__price-container {
  height: 21px;
}

.cart__price-container {
  display: flex;
  align-items: center;
}
/* ... */

